--- a/RN_BASE_0.61/android/app/src/main/res/values/strings.xml
+++ b/RN_BASE_0.61/android/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 	<string moduleConfig="true" name="reactNativeCodePush_androidDeploymentKey">14G78s0Tii6oJXkWD9khpJArW7aWIVFj9JTMZ</string>
-    <string name="app_name">WindsBase</string>
+    <string name="app_name">ChatApp</string>
     <string name="appCenterCrashes_whenToSendCrashes" moduleConfig="true" translatable="false">DO_NOT_ASK_JAVASCRIPT</string>
     <string name="appCenterAnalytics_whenToEnableAnalytics" moduleConfig="true" translatable="false">ALWAYS_SEND</string>
     <string name="facebook_app_id">2449712991815530</string>
